# init

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: cycle_detector.h  dag.h  defines.h  reaper.h  singleton.h  target.h  unit.h  unit_manager.h  util.h
src/: cycle_detector.cpp  dag.cpp  main.cpp  reaper.cpp  singleton.cpp  target.cpp  unit.cpp  unit_manager.cpp
